# paquo

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  README.md  environment.devenv.yml  environment.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: run_pytests.yaml  typing.yaml
docs/source/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  quickstart.rst
examples/: README.md  example_01_read_annotations.py  example_02_add_annotations.py  example_03_project_with_classes.py  example_04_project_with_image_metadata.py  example_05_draw_tiles_on_image.py  prepare_resources.py
extras/: README.md
extras/osx_app_shim/: PaquoOpenQpZip.py  setup.py
paquo/: .paquo.defaults.toml  __init__.py  __main__.py  _base.py  _cli.py  _config.py  _logging.py  _repr.py  _utils.py  classes.py  colors.py  hierarchy.py  images.py  java.py  jpype_backend.py  pathobjects.py  projects.py  qupath.py
paquo/objects/: classes.py  hierarchy.py  images.py  projects.py
paquo/objects/tests/: test_projects.py
paquo/qupath/: jpype_backend.py  util.py
paquo/tests/: conftest.py  test_classes.py  test_colors.py  test_config.py  test_hierarchy.py  test_images.py  test_jpype_backend.py  test_main.py  test_paquo.py  test_pathobjects.py  test_projects.py  test_readonly.py  test_repr.py
