[metadata]
name = paquo
url = https://github.com/bayer-science-for-a-better-life/paquo
download_url = https://github.com/bayer-science-for-a-better-life/paquo
license = GPLv3
license_file = LICENSE
description = library for interacting with QuPath
long_description = file: README.md
long_description_content_type = text/markdown
author = Santiago Villalba, Andreas Poehlmann
author_email = santiago.villalba@bayer.com, andreas.poehlmann@bayer.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Java
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    JPype1>=1.0.1
    shapely

[options.extras_require]
dev =
    pytest
