[metadata]
name = paquo
url = https://github.com/bayer-science-for-a-better-life/paquo
download_url = https://github.com/bayer-science-for-a-better-life/paquo
license = GPLv3
license_file = LICENSE
description = library for interacting with QuPath
long_description = file: README.md
long_description_content_type = text/markdown
author = Santiago Villalba, Andreas Poehlmann
author_email = santiago.villalba@bayer.com, andreas.poehlmann@bayer.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Java
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages = find:
python_requires = >=3.7
install_requires =
    dynaconf>=3,!=3.1.0
    JPype1>=1.0.1
    shapely
    packaging
    typing_extensions; python_version < '3.8'

[options.packages.find]
exclude =
    *.tests

[options.package_data]
paquo =
    .paquo.defaults.toml
    py.typed

[options.extras_require]
ome =
    ome-types

dev =
    pytest>=6
    pytest-cov
    mypy
    ome-types
    importlib_resources
    typing_extensions

docs =
    sphinx
    sphinxemoji
    sphinx-rtd-theme
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    paquo = paquo.__main__:main


[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
exclude = ^examples|^extras|^docs|tests.*

[mypy-jpype.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[mypy-dynaconf.*]
ignore_missing_imports = True

[mypy-ome_types.*]
ignore_missing_imports = True
